tests/semantic/valid/structs/basic.src
struct Point {
    int x;
    int y;
}

struct Rectangle {
    Point topLeft;
    Point bottomRight;
}

fn main() -> int {
    Point p;
    p.x = 10;
    p.y = 20;
    
    Rectangle r;
    r.topLeft = p;
    r.bottomRight.x = 100;
    r.bottomRight.y = 200;
    
    return p.x + p.y + r.bottomRight.x;
}
