tests/semantic/invalid/type_mismatch/assignment.src
fn test() -> int {
    string s = "hello";
    int x = s;
    return x;
}
